# Ocr

./: CMakeLists.txt  Ocr.cpp  Ocr.h  README.md  build_windows.bat
OcrLib/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrLiteCApi.h  OcrResultUtils.h  OcrStruct.h  OcrUtils.h  getopt.h  main.h  version.h
OcrLib/lib/: RapidOcrOnnx.lib
